--- a/velowrench.UI/Views/Tools/ChainLengthCalculatorView.axaml
+++ b/velowrench.UI/Views/Tools/ChainLengthCalculatorView.axaml
@@ -80,7 +80,7 @@
                        Margin="0,10,0,3"
                        Text="{x:Static res:Languages.LargestFrontChainring}" />
             <NumericUpDown Grid.Row="2" Grid.Column="0"
-                            ShowButtonSpinner="False"
+                           ShowButtonSpinner="False"
                            Value="{Binding TeethLargestChainring, Delay=600}" />
             <ComboBox Grid.Row="2" Grid.Column="2"
                       Width="100"
@@ -93,8 +93,7 @@
                        Margin="0,10,0,3"
                        Text="{x:Static res:Languages.LargestRearSprocket}" />
             <NumericUpDown Grid.Row="4" Grid.Column="0"
-                           FormatString="0" Increment="1" 
-                           ShowButtonSpinner="False"
+                           FormatString="0" Increment="1" ShowButtonSpinner="False"
                            Value="{Binding TeethLargestSprocket, Delay=600}" />
             <ComboBox Grid.Row="4" Grid.Column="2"
                       Width="100"
