--- a/velowrench.UI/Views/MainView.axaml
+++ b/velowrench.UI/Views/MainView.axaml
@@ -1,6 +1,7 @@
 <UserControl x:Class="velowrench.UI.Views.MainView"
              xmlns="https://github.com/avaloniaui"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:converters="clr-namespace:velowrench.UI.Converters"
              xmlns:materialIcons="clr-namespace:Material.Icons.Avalonia;assembly=Material.Icons.Avalonia"
              xmlns:services="clr-namespace:velowrench.UI.Services"
              xmlns:views="clr-namespace:velowrench.UI.Views"
@@ -9,6 +10,10 @@
              Background="{DynamicResource CustomMainBackground}"
              Design.Height="640"
              Design.Width="360">
+
+    <UserControl.Resources>
+        <converters:BoolToInverseConverter x:Key="BoolToInverseConverter" />
+    </UserControl.Resources>
 
     <Grid Margin="8,8"
           ColumnDefinitions="Auto, *, Auto, Auto" RowDefinitions="40, *">
@@ -59,13 +64,22 @@
         </Button>
 
         <ScrollViewer Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="4"
-                      Margin="0,15,0,0">
+                      Margin="0,15,0,0"
+                      IsVisible="{Binding IsBusy, Converter={StaticResource BoolToInverseConverter}}">
             <ContentControl Content="{Binding CurrentContent}">
                 <ContentControl.DataTemplates>
                     <services:ViewLocator />
                 </ContentControl.DataTemplates>
             </ContentControl>
         </ScrollViewer>
+
+        <ProgressBar Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="4"
+                     Width="100" Height="100"
+                     Margin="0,15,0,0" HorizontalAlignment="Center" VerticalAlignment="Center"
+                     IsIndeterminate="True"
+                     IsVisible="{Binding IsBusy}"
+                     ShowProgressText="False"
+                     Theme="{DynamicResource ProgressRing}" />
     </Grid>
 
 </UserControl>
