--- a/velowrench.UI/Views/Help/SpokeLengthCalculatorHelpView.axaml
+++ b/velowrench.UI/Views/Help/SpokeLengthCalculatorHelpView.axaml
@@ -1,6 +1,7 @@
 <UserControl x:Class="velowrench.UI.Views.Help.SpokeLengthCalculatorHelpView"
              xmlns="https://github.com/avaloniaui"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:controls="using:velowrench.UI.Controls"
              xmlns:materialIcons="clr-namespace:Material.Icons.Avalonia;assembly=Material.Icons.Avalonia"
              xmlns:math="clr-namespace:AvaloniaMath.Controls;assembly=AvaloniaMath"
              xmlns:res="clr-namespace:velowrench.UI.Resources"
@@ -63,22 +64,27 @@
                 </Button>
 
                 <StackPanel Orientation="Horizontal">
-                    <math:FormulaBlock Margin="0,15,0,5" HorizontalAlignment="Left" VerticalAlignment="Center"
-                                       Formula="{}{w_L}, {}{w_R}" Scale="18" />
+                    <controls:LaTeXBitmapControl Width="60" Height="25"
+                                                 Margin="0,10,0,0"
+                                                 Formula="{}{w_L}, {}{w_R}" />
                     <TextBlock Margin="5,10,0,0" VerticalAlignment="Center"
-                               Classes="Content" Text="{x:Static res:Languages.CenterToFlangeDistances}" />
+                               Classes="Content"
+                               Text="{x:Static res:Languages.CenterToFlangeDistances}" />
                 </StackPanel>
 
                 <StackPanel Orientation="Horizontal">
-                    <math:FormulaBlock Margin="0,10,0,5" HorizontalAlignment="Left" VerticalAlignment="Center"
-                                       Formula="{}{D_L}, {}{D_R}" Scale="18" />
-                    <TextBlock Margin="5,5,0,0" VerticalAlignment="Center"
-                               Classes="Content" Text="{x:Static res:Languages.HubDiameters}" />
+                    <controls:LaTeXBitmapControl Width="60" Height="25"
+                                                 Margin="0,5,0,0"
+                                                 Formula="{}{D_L}, {}{D_R}" />
+                    <TextBlock Margin="5,10,0,0" VerticalAlignment="Center"
+                               Classes="Content"
+                               Text="{x:Static res:Languages.HubDiameters}" />
                 </StackPanel>
 
                 <!--  Rim measurements  -->
                 <TextBlock Margin="0,10,0,0"
-                           Classes="Header2" Text="{x:Static res:Languages.RimMeasurements}" />
+                           Classes="Header2"
+                           Text="{x:Static res:Languages.RimMeasurements}" />
                 <Button Grid.Row="0" Grid.Column="0"
                         Margin="0,5,0,0" HorizontalAlignment="Left" VerticalAlignment="Top"
                         Classes="Secondary"
@@ -95,15 +101,18 @@
                 </Button>
 
                 <StackPanel Orientation="Horizontal">
-                    <math:FormulaBlock Margin="0,10,0,5" HorizontalAlignment="Left" VerticalAlignment="Center"
-                                       Formula="ERD" Scale="18" />
-                    <TextBlock Margin="5,5,0,0" VerticalAlignment="Center"
-                               Classes="Content" Text="{x:Static res:Languages.EffectiveRimDiameter}" />
+                    <controls:LaTeXBitmapControl Width="50" Height="20"
+                                                 Margin="0,15,0,0"
+                                                 Formula="ERD" />
+                    <TextBlock Margin="5,10,0,0" VerticalAlignment="Center"
+                               Classes="Content"
+                               Text="{x:Static res:Languages.EffectiveRimDiameter}" />
                 </StackPanel>
 
                 <!--  Build configuration  -->
                 <TextBlock Margin="0,10,0,0"
-                           Classes="Header2" Text="{x:Static res:Languages.BuildConfiguration}" />
+                           Classes="Header2"
+                           Text="{x:Static res:Languages.BuildConfiguration}" />
                 <Button Grid.Row="0" Grid.Column="0"
                         Margin="0,5,0,0" HorizontalAlignment="Left" VerticalAlignment="Top"
                         Classes="Secondary"
@@ -120,24 +129,30 @@
                 </Button>
 
                 <StackPanel Orientation="Horizontal">
-                    <math:FormulaBlock Margin="0,10,0,5" HorizontalAlignment="Left" VerticalAlignment="Center"
-                                       Formula="S" Scale="18" />
-                    <TextBlock Margin="5,5,0,0" VerticalAlignment="Center"
-                               Classes="Content" Text="{x:Static res:Languages.NumberOfSpokes}" />
+                    <controls:LaTeXBitmapControl Width="15" Height="15"
+                                                 Margin="0,10,0,0"
+                                                 Formula="S" />
+                    <TextBlock Margin="5,10,0,0" VerticalAlignment="Center"
+                               Classes="Content"
+                               Text="{x:Static res:Languages.NumberOfSpokes}" />
                 </StackPanel>
 
                 <StackPanel Orientation="Horizontal">
-                    <math:FormulaBlock Margin="0,10,0,5" HorizontalAlignment="Left" VerticalAlignment="Center"
-                                       Formula="X" Scale="18" />
+                    <controls:LaTeXBitmapControl Width="15" Height="15"
+                                                 Margin="0,10,0,0"
+                                                 Formula="X" />
                     <TextBlock Margin="5,5,0,0" VerticalAlignment="Center"
-                               Classes="Content" Text="{x:Static res:Languages.CrossCount}" />
+                               Classes="Content"
+                               Text="{x:Static res:Languages.CrossCount}" />
                 </StackPanel>
 
                 <StackPanel Orientation="Horizontal">
-                    <math:FormulaBlock Margin="0,10,0,5" HorizontalAlignment="Left" VerticalAlignment="Center"
-                                       Formula="d" Scale="18" />
+                    <controls:LaTeXBitmapControl Width="15" Height="15"
+                                                 Margin="0,5,0,0"
+                                                 Formula="d" />
                     <TextBlock Margin="5,5,0,0" VerticalAlignment="Center"
-                               Classes="Content" Text="{x:Static res:Languages.HubSpokeHoleDiameter}" />
+                               Classes="Content"
+                               Text="{x:Static res:Languages.HubSpokeHoleDiameter}" />
                 </StackPanel>
 
             </StackPanel>
@@ -154,34 +169,39 @@
 
                 <!--  Definitions  -->
                 <TextBlock Margin="0,10,0,0"
-                           Classes="Content" Text="{x:Static res:Languages.Definitions}" />
-                <math:FormulaBlock Margin="0,10,0,5" HorizontalAlignment="Center" VerticalAlignment="Center"
-                                   Formula="{Binding DefinitionLaTeX}"
-                                   Scale="16" />
+                           Classes="Content"
+                           Text="{x:Static res:Languages.Definitions}" />
+                <controls:LaTeXBitmapControl Width="350" Height="70"
+                                             Margin="0,10,0,5"
+                                             Formula="{Binding DefinitionLaTeX}" />
 
                 <!--  Baseline chord C  -->
                 <TextBlock Margin="0,5,0,0"
-                           Classes="Content" Text="{x:Static res:Languages.BaselineChordCalculation}" />
-                <math:FormulaBlock Margin="0,10,0,5" HorizontalAlignment="Center" VerticalAlignment="Center"
-                                   Formula="{Binding BaselineChordCLaTeX}"
-                                   Scale="20" />
+                           Classes="Content"
+                           Text="{x:Static res:Languages.BaselineChordCalculation}" />
+                <controls:LaTeXBitmapControl Width="300" Height="50"
+                                             Margin="0,10,0,5"
+                                             Formula="{Binding BaselineChordCLaTeX}" />
 
                 <!--  Left spoke length  -->
                 <TextBlock Margin="0,5,0,0"
-                           Classes="Content" Text="{x:Static res:Languages.LeftSpokeLength}" />
-                <math:FormulaBlock Margin="0,10,0,5" HorizontalAlignment="Center" VerticalAlignment="Center"
-                                   Formula="{Binding SpokeLengthLeftLaTeX}"
-                                   Scale="20" />
+                           Classes="Content"
+                           Text="{x:Static res:Languages.LeftSpokeLength}" />
+                <controls:LaTeXBitmapControl Width="200" Height="60"
+                                             Margin="0,10,0,5"
+                                             Formula="{Binding SpokeLengthLeftLaTeX}" />
 
                 <!--  Right spoke length  -->
                 <TextBlock Margin="0,5,0,0"
-                           Classes="Content" Text="{x:Static res:Languages.RightSpokeLength}" />
-                <math:FormulaBlock Margin="0,10,0,5" HorizontalAlignment="Center" VerticalAlignment="Center"
-                                   Formula="{Binding SpokeLengthRightLaTeX}"
-                                   Scale="20" />
+                           Classes="Content"
+                           Text="{x:Static res:Languages.RightSpokeLength}" />
+                <controls:LaTeXBitmapControl Width="200" Height="60"
+                                             Margin="0,10,0,5"
+                                             Formula="{Binding SpokeLengthRightLaTeX}" />
 
                 <TextBlock Margin="0,5,0,0"
-                           Classes="Content" Text="{x:Static res:Languages.SpokeHoleRadiusNote}" />
+                           Classes="Content"
+                           Text="{x:Static res:Languages.SpokeHoleRadiusNote}" />
 
             </StackPanel>
 
