Refactor styles to centralized CustomStyles.axaml

--- a/velowrench.UI/App.axaml
+++ b/velowrench.UI/App.axaml
@@ -7,6 +7,7 @@
              RequestedThemeVariant="Dark">
 
     <Application.Styles>
+		<StyleInclude Source="Styles/CustomStyles.axaml" />
         <semi:SemiTheme Locale="en-US" />
         <semi:DataGridSemiTheme />
         <materialIcons:MaterialIconStyles />
